2005-05-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-merge.c: removed redundant casts.

2005-05-06  Michael Natterer  <mitch@gimp.org>

	* app/actions/gradient-editor-commands.h: added enum for the
	"load_color" actions.

	* app/actions/gradient-editor-actions.c
	* app/actions/gradient-editor-commands.c: use the new enum instead
	of magic values, cleanup.

	* app/actions/palette-editor-commands.c: cleanup.

	* app/widgets/gimpbrusheditor.c
	* app/widgets/gimpdataeditor.c: cleanup.

	* app/widgets/gimpgradienteditor.c: added GtkObject::destroy() and
	GtkWidget::unmap() implementations which destroy the color dialog.
	Destroy color dialogs by cancelling them via gtk_dialog_response(),
	so temporarily changed colors are restored correctly. Refactored
	my last commit below a bit. Various cleanups.

	* app/widgets/gimppaletteeditor.[ch]: no need to remember the
	buttons in the GimpPaletteEditor struct.

2005-05-06  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_by_values): abort early if the values are
	all setup already. Fixes bug #164281.

2005-05-06  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-sse2.c
	(gimp_composite_lighten_rgba8_rgba8_rgba8_sse2): applied a patch
	from Joao S. O. Bueno Calligaris that changes the SSE2 code to
	load the proper register. Fixes bug #164061.

2005-05-05  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpgradienteditor.c (control_draw)
	(control_draw_normal_handle)
	(control_draw_middle_handle): changed handle colors to be always
	black and white. Fixes bug #303118. Also changed the handle bar's
	background and the handles' outlines to theme colors which should
	make the handles distinguishable from the background for all
	themes.

	Various unrelated cleanups.

2005-05-04  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-proc-def.[ch] (plug_in_proc_def_find): new
	function which finds a proc_def in a GSList by its procedure name.
